--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies":  {
     "babel":                 "^5.0.9",
-    "octokat":               "0.4.11"
+    "octokat":               "0.4.11",
+    "promise":               "*"
   }
 }
